# backend-restaurants-vision

./: .env.example  .gitignore  Procfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
api/: index.py
config/: exception_handler.py  pagination.py  settings.py  urls.py  views.py
reservations/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
restaurants/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
utilisateurs/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
