[project]
name = "backend-restaurants"
version = "1.0.0"
description = "API REST pour gestion de réservations de restaurants"
requires-python = ">=3.11"
dependencies = [
    "Django==4.2.11",
    "djangorestframework==3.16.1",
    "drf-spectacular==0.28.0",
    "djangorestframework-simplejwt==5.5.1",
    "django-cors-headers==4.9.0",
    "psycopg2-binary==2.9.9",
    "uvicorn[standard]==0.23.2",
    "vercel-django==0.1.0",
]

[tool.uv]
dev-dependencies = []